- Add not found picture

--- a/404.html
+++ b/404.html
@@ -75,7 +75,7 @@
                     <div class="columns is-vcentered">
                         <div class="column is-5">
                             <figure class="image is-4by3">
-                                <img src="https://mbtskoudsalg.com/images/data-image-png-3.png" alt="Description">
+                                <img src="images/not-found.png" alt="Description">
                             </figure>
                         </div>
                         <div class="column is-6 is-offset-1">
