- Navbar now static on top

--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 		<meta name="msapplication-TileImage" content="images/icon/ms-icon-144x144.png">
 	</head>
 	<body class="site">
-		<nav class="navbar is-white topNav">
+		<nav class="navbar is-fixed-top is-white topNav">
 			<div class="container is-fluid">
 				<div class="navbar-brand">
 					<a class="navbar-item" href="index.html">
@@ -70,7 +70,7 @@
 			</div>
 		</nav>
 		<div class="hero site-content">
-            <div class="hero-body">
+            <div class="hero-body top">
                 <div class="container has-text-centered">
                     <div class="columns is-vcentered">
                         <div class="column is-5">
