--- a/genre.html
+++ b/genre.html
@@ -30,7 +30,7 @@
 		<meta name="msapplication-TileImage" content="images/icon/ms-icon-144x144.png">
 	</head>
 	<body class="site">
-		<nav class="navbar is-white topNav">
+		<nav class="navbar is-fixed-top is-white topNav">
 			<div class="container is-fluid">
 				<div class="navbar-brand">
 					<a class="navbar-item" href="index.html">
@@ -63,14 +63,14 @@
 					</div>
 					<div class="navbar-end">
                         <a class="navbar-item" href="artist.html">Artist</a>
-                        <a class="navbar-item" href="genre.html">Genre</a>
+                        <a class="navbar-item is-active" href="genre.html">Genre</a>
                         <a class="navbar-item" href="watch.html">Watch</a>
 					</div>
 				</div>
 			</div>
 		</nav>
 		<section class="container site-content">
-			<div class="columns">
+			<div class="columns top">
 				<div class="column is-3">
 					<aside class="menu">
 						<p class="menu-label">
