--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<meta name="msapplication-TileImage" content="images/icon/ms-icon-144x144.png">
 	</head>
 	<body class="site">
-		<nav class="navbar is-white topNav">
+		<nav class="navbar is-fixed-top is-white topNav">
 			<div class="container is-fluid">
 				<div class="navbar-brand">
 					<a class="navbar-item" href="index.html">
@@ -69,8 +69,8 @@
 				</div>
 			</div>
 		</nav>
-		<section class="container is-fluid site-content">
-			<h1>Latest Movie</h1>
+		<section class="container is-fluid site-content top">
+			<h1 class="topheading">Latest Movie</h1>
 			<div class="columns is-multiline is-mobile">
 				<div class="column is-half-mobile is-two-fifths-tablet is-one-fifth-desktop is-narrow">
 					<div class="card large">
