--- a/watch.html
+++ b/watch.html
@@ -30,7 +30,7 @@
 		<meta name="msapplication-TileImage" content="images/icon/ms-icon-144x144.png">
 	</head>
 	<body class="site">
-		<nav class="navbar is-white topNav">
+		<nav class="navbar is-fixed-top is-white topNav">
 			<div class="container is-fluid">
 				<div class="navbar-brand">
 					<a class="navbar-item" href="index.html">
@@ -64,18 +64,18 @@
 					<div class="navbar-end">
                         <a class="navbar-item" href="artist.html">Artist</a>
                         <a class="navbar-item" href="genre.html">Genre</a>
-                        <a class="navbar-item" href="watch.html">Watch</a>
+                        <a class="navbar-item is-active" href="watch.html">Watch</a>
 					</div>
 				</div>
 			</div>
 		</nav>
-		<div class="hero">
+		<div class="hero top">
 			<div class="embed">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/D-SQqppuGvc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		    </div>
 		</div>
 		<section class="container site-content">
-			<h1>Watch Movie Collider (2018)</h1>
+			<h1 class="topheading">Watch Movie Collider (2018)</h1>
 			<div class="columns">
 				<div class="column is-9">
 					<div class="box content">
